Attempt to build pdf on push

--- a/main.tex
+++ b/main.tex
@@ -134,10 +134,10 @@
     \mysubheading{Elevance Health, Inc. (Formerly Anthem) - Indianapolis, IN}
     Graduate Info Technology Intern (Remote) \mydate{June 2022 - Present}
     \begin{p_item2}
-        \item Implement Bayesian anomaly detection approach on Amazon Web Service (AWS) to Evaluation \& Management (E/M) claims to identify potentially up-coded claims for down-coding
-        \item Conduct bias and explain-ability analyses on resulting models to ensure that they perform similarly on different genders and ethnicities. 
+        \item Implement custom PyTorch semi-supervised Bayesian anomaly detection approach on Amazon Web Service (AWS) to Evaluation \& Management (E/M) claims to identify potentially up-coding
+        \item Received Impact award for end-of-summer technical presentations to senior management
         \item Participate in Agile Scrum model development process using Jira of a Fortune-30 company
-        \item Create modeling datasets using PySpark in Jupyter Notebooks on Kubeflow
+        \item Create modeling datasets using PySpark SQL in Jupyter Notebooks on Kubeflow
     \end{p_item2}
     
     %
