--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,17 @@
 \documentclass[10pt]{article}
+
+% display speaking points
+\usepackage{etoolbox}
+\newtoggle{notes}
+\toggletrue{notes}
+\togglefalse{notes}
+
+\newtoggle{notnotes}
+\toggletrue{notnotes}
+\iftoggle{notes}{
+    \togglefalse{notnotes}
+}
+
 \newcommand\mpfact{.81}
 \newcommand\mpfactadj{.82}
 
@@ -8,7 +21,7 @@
 \geometry{
     a4paper, 
     margin=.25in, 
-    voffset=.25in
+    %voffset=.25in
 }
 
 \pagenumbering{gobble}
@@ -68,37 +81,86 @@
 \begin{document}
 \small
 	
-	% Title 1 
-    \begin{table}[t]
-        \centering
-        \begin{tabular}{c|l}
-            \multirow{4}{*}{\huge{\textbf{JOSEPH LAVOND}}} & Phone: 209-269-7175\\
-            & Email: joelavond@gmail.com \\
-            & GitHub: \href{https://github.com/JoeLavond}{github.com/JoeLavond} \\
-        & LinkedIn: \href{https://linkedin.com/in/josephlavond1997}{linkedin.com/in/josephlavond1997} 
-        \end{tabular}
-        \vspace{-.3cm}
-    \end{table}
-	
-	\myheading{Summary}
-    \noindent I live to learn daily and discover practical solutions to problems. I am dedicated to making lasting contributions and thrive in fast-paced environments that provide constant challenges and opportunities for growth. 
-    
+	% Title 2 
+    \iftoggle{notnotes}{%
+        \begin{table}[t]
+            \centering
+            \begin{tabular}{c|l}
+                \multirow{4}{*}{\huge{\textbf{JOSEPH LAVOND}}} & Phone: 209-269-7175\\
+                & Email: joelavond@gmail.com \\
+                & GitHub: \href{https://github.com/JoeLavond}{github.com/JoeLavond} \\
+            & LinkedIn: \href{https://linkedin.com/in/josephlavond1997}{linkedin.com/in/josephlavond1997} 
+            \end{tabular}
+            \vspace{-.3cm}
+        \end{table}
+    	
+    }
+
     %
-    \medskip
+    \iftoggle{notes}{%
+        \myheading{Summary}
+        \textcolor{blue}{
+        \vspace{-\baselineskip} \\
+            Common Questions:
+            \begin{p_item}%
+                \item About me: School, advisor, and research, then consulting and internships, finally automotive
+                \item Goals: Set industry standards for autonomy, improving access and safety of transportation
+                \item Strengths: Background, presentation, work great on a team or as an individual
+                \item Weaknesses: Time management and leadership skills
+            \end{p_item} 
+            My Questions:
+            \begin{p_item}
+                \item How do you cope with winter? What is your favorite thing to do in February?
+                \item What do you see as the next big step for Zero-Zero-Zero?
+                \item Current trend for office vs. home work?
+            \end{p_item}
+        }   
+        
+        \smallskip
+    }
     
-    
-    
-    %
     \myheading{Internships}
+
+    %
+    \mysubheading{Cisco - San Jose, CA}
+    Ph.D. Intern (Remote) \mydate{June 2023 - Aug 2023}
+    \begin{p_item2}
+        \item Lead research efforts to improve the diversity of samples produced by generative artificial intelligence
+        \item Designed architecture changes to generative adversarial networks (GANs) to improve sample diversity 
+        \item Identified latent space conditioning as viable strategy for producing higher quality generated outputs from variational auto-encoders (VAEs)
+    \end{p_item2}
     
     %
     \mysubheading{Elevance Health, Inc. (Formerly Anthem) - Indianapolis, IN}
     Graduate Info Technology Intern (Remote) \mydate{June 2022 - Aug 2022}
     \begin{p_item2}
         \item Implement custom PyTorch semi-supervised Bayesian anomaly detection approach on Amazon Web Service (AWS) to identify up-coded Evaluation \& Management (E/M) claims 
-        \item Participate in Agile Scrum model development process using Jira of a Fortune-30 company
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: Very few known examples of fraud \\
+                Task: DS wanted to explore Bayesian methods to tackle use case \\
+                Act: Implemented Bayesian model with semi-supervised extension and deep learning solution that approximates complex Bayesian methods \\
+                Result: Presentations technical and non-technical with compliments \\
+                Reflect: Implement stochastic weight averaging in-house 
+            } 
+        \smallskip
+        }
+        
         \item Received Impact award for end-of-summer technical presentation to senior management
-        \item Create modeling dataset pipeline using PySpark SQL in Jupyter Notebooks on Kubeflow
+        \item Participate in Agile Scrum model development process using Jira of a Fortune-30 company
+        \item Create modeling data set pipeline for 60M row database using PySpark SQL in Jupyter on Kubeflow
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: Bayesian methods are often computationally costly. However, this model has an exact solution \\
+                Task: Compute and store the model solution for fast training and real time prediction \\
+                Act: Use PySpark SQL to use Hadoop MapReduce operations to compute solution and store on s3 in AWS \\
+                Result: Faster run time than in-house distributed algorithms with minimal performance loss and interpretable solution 
+            } 
+        \smallskip
+        }
+        
     \end{p_item2}
     
     %
@@ -106,29 +168,43 @@
     Actuarial Services Intern (Remote) \mydate{Apr 2020 - Aug 2020}
     \begin{p_item2}
         \item Spearheaded the company-wide projection of membership for all lines of business
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: Credentialed actuary left already short staffed team early into my internship \\
+                Task: Take over their report projecting membership which most finance and actuarial teams build upon \\
+                Act: Learned VBA to automate notoriously manual report \\
+                Result: Teams now able to complete downstream reports earlier in the month \\
+                Reflect: Rewrite report to be readable and understandable
+            } 
+        \smallskip
+        }
+        
         \item Learned VBA to automate monthly updates to company forecasts within Microsoft Excel 
         \item Automated data collection using process flows in SAS and SQL queries in Microsoft Access
     \end{p_item2}
     
     
     %
-    \myheading{Education}
-	
-	\mysubheading{University of North Carolina - Chapel Hill, NC} 
-	Doctor of Philosophy: \textbf{Statistics and Operations Research}%
-	\mydate{Aug 2020 - May 2025}%
-	\begin{p_item2}%
-        \item Funding through NSF-funded grant to add research to theory and application of networks
-	\end{p_item2}
-    
-	\mysubheading{California Polytechnic State University - San Luis Obispo, CA}
-	Bachelor of Science: \textbf{Statistics} \mydate{Sep 2016 - Mar 2020}
-	\begin{p_item2}
-		\item 3.99 GPA, Summa Cum Laude, Academic Excellence Award
-		\item Founder and Secretary of the Actuarial Society Club
-		\item Member of Mu Sigma Rho, the US National Statistics Honors Society
-	\end{p_item2}
-	
+    \iftoggle{notnotes}{
+        \myheading{Education}
+    	
+    	\mysubheading{University of North Carolina - Chapel Hill, NC} 
+    	Doctor of Philosophy: \textbf{Statistics and Operations Research}%
+    	\mydate{Aug 2020 - May 2025}%
+    	\begin{p_item2}%
+            \item Funding through NSF-funded grant to add research to theory and application of networks
+    	\end{p_item2}
+        
+    	\mysubheading{California Polytechnic State University - San Luis Obispo, CA}
+    	Bachelor of Science: \textbf{Statistics} \mydate{Sep 2016 - Mar 2020}
+    	\begin{p_item2}
+    		\item 3.99 GPA, Summa Cum Laude, Academic Excellence Award
+    		\item Founder and Secretary of the Actuarial Society Club
+    		\item Member of Mu Sigma Rho, the US National Statistics Honors Society
+    	\end{p_item2}
+     }
+    	
 	
     % 
     \myheading{Research}
@@ -138,7 +214,31 @@
     Research under Dr.\hspace{1pt}Yao Li \mydate{Aug 2021 - Present}
     \begin{p_item2}
         \item Development of methodology to improve the robustness and data privacy of Neural Networks
-        \item Proposed novel defense against Backdoor Attacks in Federated Learning (ICLR submission)
+        \item Proposing Meta-Learning approach to model aggregation for Personalized Federated Learning 
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: How to use shared information from all users to create the best personalized models for each \\
+                Task: Create a shared model that is a good initialization for user fine tuning \\
+                Act: Specific modifications to meta learning algorithms to make viable to federated learning by also having good accuracy for users without data \\
+                Result: Implementation that creates improved accuracy on new users with or without data
+            } 
+        \smallskip
+        }
+        
+        \item Created novel defense against Backdoor Attacks in Federated Learning 
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: Users models are aggregated to create a shared model while preserving data privacy, but a single malicious user can send an update that can compromise the shared model \\
+                Task: Determine how to identify and exclude malicious updates \\
+                Act: With small data set can understand the behavior of non-malicious users and exclude those with different behavior \\
+                Result: Can filter out malicious users even when up to 40\% of all suggested updates are harmful \\
+                Reflect: Need to extend to adaptive attack, when malicious users know defense
+            } 
+        \smallskip
+        }
+        
         \item PyTorch implementation and multi-GPU training of computer vision models on Linux cluster
     \end{p_item2}
     
@@ -147,6 +247,18 @@
     Statistical Consultant \mydate{Sep 2019 - Aug 2020}
     \begin{p_item2}
         \item Provided SAS mixed modeling analyses to understand the relationships between early life factors and childhood obesity as part of a NIH-funded $\$$2M grant
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: Follow mother-infant pairs over time monitoring breast and bottle feeding practices \\
+                Task: Statistical inference to determine meaningful relationships in feeding behavior \\
+                Act: Create mixed model to remove between subject variation and use backwards selection \\
+                Result: Familiarity (frequency bottle feeding and multi-child mothers) have higher intakes \\
+                Reflect: Many models can answer the same question, however, some give more desirable interpretations
+            } 
+        \smallskip
+        }
+        
         \item Coauthored publication in the Journal of Maternal and Child Nutrition (\href{https://doi.org/10.1111/mcn.13185}{doi:10.1111/mcn.13185})
     \end{p_item2}
     
@@ -154,7 +266,19 @@
     Frost Summer Research Program 2019 \mydate{May 2019 - Sep 2019}
     \begin{p_item2}
         \item Manipulate the Surveillance, Epidemiology, and End Results (SEER) database, containing over 20 million cancer cases within the United States, using SAS
-        \item Analyze SEER data with KM and COX survival models using R
+        \item Analyze SEER data with KM\iftoggle{notes}{ \textcolor{blue}{(Empirical survival curve)}}{} and COX\iftoggle{notes}{ \textcolor{blue}{(Proportional hazards = instantaneous failure rate)}}{} survival models using R
+        \iftoggle{notes}{
+        
+            \smallskip \textcolor{blue}{
+                Situation: Large database on many historical cancers cases in US \\
+                Task: Present sensitive information in an informative manner \\
+                Act: Coordinate use of multiple statistical tools to process and model large data \\
+                Result: Interactive interface to visualize prognosis and impact of various treatment options \\
+                Reflect: More complex models needed to give accurate estimates
+            } 
+        \smallskip
+        }
+        
         \item Construct an interactive R Shiny app for cancer patient use, taking demographic and diagnosis information as inputs, and providing a prognosis
     \end{p_item2}
     
@@ -164,22 +288,20 @@
     \myheading{Skills}
     
     \mysubheading{Coursework}
-    \begin{p_item}
-        \item Machine Learning: Gradient Boosting, Bagging, Bootstrapping, Regularization, Dimension Reduction 
-        \item Deep Learning: Semi-Supervised, Self-Supervised, and Transfer Learning for NLP and Computer Vision
-    \end{p_item}
+    \begin{p_item2}
+        \item Machine Learning: Gradient Boosting\iftoggle{notes}{ \textcolor{blue}{(Penalize mistakes heavier for later models)}}, Bagging\iftoggle{notes}{ \textcolor{blue}{(Bootstrap aggregation)}}, Bootstrapping, Regularization\iftoggle{notes}{ \textcolor{blue}{(Penalize against large or unwanted solutions)}}, Dimension Reduction 
+        \item Deep Learning: Semi-Supervised\iftoggle{notes}{ \textcolor{blue}{(Partially labeled)}}, Self-Supervised\iftoggle{notes}{ \textcolor{blue}{(Learn pseudo-labels)}}, and Transfer Learning for NLP and Computer Vision
+    \end{p_item2}
     
     \mysubheading{Programming Languages}
-    \begin{p_item}
+    \begin{p_item2}
         \item SQL (Snowflake, HUE, Microsoft Access) 
         \item Python (PyTorch, SciKit-Learn, PySpark, Pandas, NumPy, Matplotlib) 
         \item R (caret, tidyverse, ggplot2, dplyr, purr, stringr, shiny)
-        \item Other: SAS, Microsoft Excel, VBA
-    \end{p_item}
+        \item Other: SAS, Microsoft Excel
+    \end{p_item2}
     
-    {\textsc{Communication.}} Microsoft (Outlook, Teams, Word, Powerpoint), \LaTeX
-    
-    \textsc{Misc.} Git (Bash, GitHub, Bitbucket), Linux (Cluster Computing, GPU Acceleration), Project Jupyter, Kubeflow
+    \textsc{Misc.} Git (GitHub, Bitbucket), Linux (Cluster Computing, GPU Acceleration), Vim, Project Jupyter, Kubeflow
     
     
     
