update project details with Cisco

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -123,11 +123,10 @@
 
     %
     \mysubheading{Cisco - San Jose, CA}
-    Ph.D. Intern (Remote) \mydate{June 2023 - Aug 2023}
+    Ph.D.\ Intern (Remote) \mydate{June 2023 - Aug 2023}
     \begin{p_item2}
         \item Lead research efforts to improve the diversity of samples produced by generative artificial intelligence
-        \item Designed architecture changes to generative adversarial networks (GANs) to improve sample diversity 
-        \item Identified latent space conditioning as viable strategy for producing higher quality generated outputs from variational auto-encoders (VAEs)
+        \item Designed architecture changes that prevent the occurrence of mode collapse in Generative Adversarial Networks (GANs)
     \end{p_item2}
     
     %
