add submission details

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -213,7 +213,7 @@
     Research under Dr.\hspace{1pt}Yao Li \mydate{Aug 2021 - Present}
     \begin{p_item2}
         \item Development of methodology to improve the robustness and data privacy of Neural Networks
-        \item Proposing Meta-Learning approach to model aggregation for Personalized Federated Learning 
+        \item Proposing Meta-Learning approach to model aggregation for Personalized Federated Learning (Submitted to ICLR 2024)
         \iftoggle{notes}{
         
             \smallskip \textcolor{blue}{
@@ -225,7 +225,8 @@
         \smallskip
         }
         
-        \item Created novel defense against Backdoor Attacks in Federated Learning 
+        \item Created novel defense against Backdoor Attacks in Federated Learning
+
         \iftoggle{notes}{
         
             \smallskip \textcolor{blue}{
@@ -258,7 +259,7 @@
         \smallskip
         }
         
-        \item Coauthored publication in the Journal of Maternal and Child Nutrition (\href{https://doi.org/10.1111/mcn.13185}{doi:10.1111/mcn.13185})
+        \item Coauthored publication in the Journal of Maternal and Child Nutrition %(\href{https://doi.org/10.1111/mcn.13185}{doi:10.1111/mcn.13185})
     \end{p_item2}
     
     %
