attempt to align bullets to past tense

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -1,4 +1,6 @@
 \documentclass[10pt]{article}
+\usepackage{xcolor}
+\usepackage{hyperref}
 
 % display speaking points
 \usepackage{etoolbox}
@@ -133,7 +135,7 @@
     \mysubheading{Elevance Health, Inc. (Formerly Anthem) - Indianapolis, IN}
     Graduate Info Technology Intern (Remote) \mydate{June 2022 - Aug 2022}
     \begin{p_item2}
-        \item Implement custom PyTorch semi-supervised Bayesian anomaly detection approach on Amazon Web Service (AWS) to identify up-coded Evaluation \& Management (E/M) claims 
+        \item Implemented custom PyTorch semi-supervised Bayesian anomaly detection approach on Amazon Web Service (AWS) to identify up-coded Evaluation \& Management (E/M) claims
         \iftoggle{notes}{
         
             \smallskip \textcolor{blue}{
@@ -147,8 +149,8 @@
         }
         
         \item Received Impact award for end-of-summer technical presentation to senior management
-        \item Participate in Agile Scrum model development process using Jira of a Fortune-30 company
-        \item Create modeling data set pipeline for 60M row database using PySpark SQL in Jupyter on Kubeflow
+        \item Participated in Agile Scrum model development process using Jira of a Fortune-30 company
+        \item Created modeling data set pipeline for 60M row database using PySpark SQL in Jupyter on Kubeflow
         \iftoggle{notes}{
         
             \smallskip \textcolor{blue}{
@@ -192,7 +194,7 @@
     	Doctor of Philosophy: \textbf{Statistics and Operations Research}%
     	\mydate{Aug 2020 - May 2025}%
     	\begin{p_item2}%
-            \item Funding through NSF-funded grant to add research to theory and application of networks
+            \item Funded through NSF-funded grant to add research to theory and application of networks
     	\end{p_item2}
         
     	\mysubheading{California Polytechnic State University - San Luis Obispo, CA}
@@ -213,7 +215,7 @@
     Research under Dr.\hspace{1pt}Yao Li \mydate{Aug 2021 - Present}
     \begin{p_item2}
         \item Development of methodology to improve the robustness and data privacy of Neural Networks
-        \item Proposing Meta-Learning approach to model aggregation for Personalized Federated Learning (Submitted to ICLR 2024)
+        \item Proposed Meta-Learning approach to model aggregation for Personalized Federated Learning (Submitted to ICLR 2024)
         \iftoggle{notes}{
         
             \smallskip \textcolor{blue}{
@@ -239,7 +241,7 @@
         \smallskip
         }
         
-        \item PyTorch implementation and multi-GPU training of computer vision models on Linux cluster
+        \item PyTorch implementation and multi-GPU training of computer vision models on Linux clusters
     \end{p_item2}
     
     % 
@@ -265,8 +267,8 @@
     %
     Frost Summer Research Program 2019 \mydate{May 2019 - Sep 2019}
     \begin{p_item2}
-        \item Manipulate the Surveillance, Epidemiology, and End Results (SEER) database, containing over 20 million cancer cases within the United States, using SAS
-        \item Analyze SEER data with KM\iftoggle{notes}{ \textcolor{blue}{(Empirical survival curve)}}{} and COX\iftoggle{notes}{ \textcolor{blue}{(Proportional hazards = instantaneous failure rate)}}{} survival models using R
+        \item Manipulated the Surveillance, Epidemiology, and End Results (SEER) database, containing over 20 million cancer cases within the United States, using SAS
+        \item Analyzed SEER data with KM\iftoggle{notes}{ \textcolor{blue}{(Empirical survival curve)}}{} and COX\iftoggle{notes}{ \textcolor{blue}{(Proportional hazards = instantaneous failure rate)}}{} survival models using R
         \iftoggle{notes}{
         
             \smallskip \textcolor{blue}{
@@ -279,7 +281,7 @@
         \smallskip
         }
         
-        \item Construct an interactive R Shiny app for cancer patient use, taking demographic and diagnosis information as inputs, and providing a prognosis
+        \item Constructed an interactive R Shiny app for cancer patient use, taking demographic and diagnosis information as inputs, and providing a prognosis
     \end{p_item2}
     
     
