update job locations

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -125,7 +125,7 @@
 
     %
     \mysubheading{Cisco - San Jose, CA}
-    Ph.D.\ Intern (Remote) \mydate{June 2023 - Aug 2023}
+    Ph.D.\ Intern \mydate{June 2023 - Aug 2023}
     \begin{p_item2}
         \item Lead research efforts to improve the diversity of samples produced by generative artificial intelligence
         \item Designed architecture changes that prevent the occurrence of mode collapse in Generative Adversarial Networks (GANs)
@@ -133,7 +133,7 @@
     
     %
     \mysubheading{Elevance Health, Inc. (Formerly Anthem) - Indianapolis, IN}
-    Graduate Info Technology Intern (Remote) \mydate{June 2022 - Aug 2022}
+    Graduate Info Technology Intern \mydate{June 2022 - Aug 2022}
     \begin{p_item2}
         \item Implemented custom PyTorch semi-supervised Bayesian anomaly detection approach on Amazon Web Service (AWS) to identify up-coded Evaluation \& Management (E/M) claims
         \iftoggle{notes}{
@@ -166,7 +166,7 @@
     
     %
     \mysubheading{Blue Cross Blue Shield of Arizona - Phoenix, AZ}
-    Actuarial Services Intern (Remote) \mydate{Apr 2020 - Aug 2020}
+    Actuarial Services Intern \mydate{Apr 2020 - Aug 2020}
     \begin{p_item2}
         \item Spearheaded the company-wide projection of membership for all lines of business
         \iftoggle{notes}{
