Updates from Overleaf

--- a/src/lavond-joseph-resume.tex
+++ b/src/lavond-joseph-resume.tex
@@ -212,8 +212,14 @@
 
     %
     \mysubheading{University of North Carolina - Chapel Hill, NC}
-    Research under Dr.\hspace{1pt}Yao Li \mydate{Aug 2021 - Present}
+    Research under Dr.\hspace{1pt}Yao Li \mydate{Aug 2021 - Present} \\
+    asdf \\
     \begin{p_item2}
+
+        \item[] FedDecay: Adapting to Data Heterogeneity in Federated Learning With Gradient Decay, Joseph Lavond, Minhao Cheng, Yao Li, \textit{Under Review}
+    
+        \item[] Trusted Aggregation (TAG): Backdoor Defense in Federated Learning, Joseph Lavond, Minhao Cheng, Yao Li, \textit{In NeurIPS Workshop on Federated Learning: Recent Advances and New Challenges, 2022}
+        
         \item Development of methodology to improve the robustness and data privacy of Neural Networks
         \item Proposed Meta-Learning approach to model aggregation for Personalized Federated Learning (Submitted to ICLR 2024)
         \iftoggle{notes}{
